--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,11 @@ html {
 }
 
 body {
-  margin: 0;
+  background: rgb(240, 240, 240);
   font-family: "Roboto", sans-serif;
   font-weight: 100;
   letter-spacing: 1.5px;
+  margin: 0;
 }
 
 .clear {
@@ -27,76 +28,88 @@ body {
 /* ******** HEADER ********* */
 /* ************************* */
 
-header {
-  background: #fff;
-}
-
-.float-left {
-  float: left;
-}
-
 nav {
+  min-height: 5.5rem;
+  padding: 1rem;
+}
+
+table {
+  text-align: center;
+}
+
+.table--height {
+  height: 6rem;
+}
+
+.centred {
+  min-height: 6rem;
   margin: 0 auto;
+  width: 80%;
+}
+
+.left,
+.right {
+  float: left;
 }
 
 /* ************************* */
 /* ********* LEFT ********** */
 /* ************************* */
 
-.first {
-  width: 15%;
-  min-width: 1px;
-  visibility: hidden;
-  font-size: 1px;
+.left {
+  width: 50%;
 }
 
-.table-example1 {
-  background: white;
-  padding: 2.6rem 0 0 4%;
-  min-width: 700px;
-  width: 40%;
-  text-align: left;
+.rocket {
+  text-align: right;
+  width: 250px;
+  padding-bottom: 0.3rem;
+}
+
+.right-pad {
+  padding-right: 6rem;
+}
+
+a img:hover {
+  padding: 0.3em 0.2em 0 0.2em;
 }
 
 /* ************************* */
 /* ********* RIGHT ********* */
 /* ************************* */
 
-.table-example2 {
-  background: #fff;
-  min-width: 670px;
-  text-align: left;
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-  width: 40%;
+header nav a {
+  display: inline-block;
+  margin: 10px;
+  text-align: center;
+  font-size: 1.1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #111;
 }
 
-header div a {
-  text-align: center;
-  font-size: 1.2rem;
-  text-transform: uppercase;
-  padding: 0 5.3rem 0 0;
+a.menu {
+  line-height: 0;
   text-decoration: none;
-  color: #000;
+}
+
+a.first {
+  padding: 0 2rem 0 0;
+}
+
+a.middle {
+  padding: 0 2rem;
+}
+
+a.last {
+  padding: 0 0 0 2rem;
+  line-height: 0;
+  text-decoration: none;
 }
 
 header nav a:hover {
   font-weight: 600;
-}
-
-#a--first {
-  margin-left: 4%;
-}
-
-#a--last {
-  /* padding: 0; */
-}
-
-img.rocket {
-  width: 280px;
-}
-a img:hover {
-  padding: 0.2em;
+  font-size: 1.08rem;
 }
 
 /* ************************* */
@@ -120,24 +133,30 @@ a img:hover {
   width: 100%;
 }
 
+.top-line {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
 .main-text {
-  padding: 13.4rem 0 0 4%;
-  min-width: 700px;
+  float: right;
+  padding-top: 13.4rem;
+  min-width: 720px;
+  width: 45%;
   color: #fff;
+  min-height: 6rem;
+  margin-right: 35%;
 }
 
 .main {
   font-size: 3.7rem;
-  padding-right: 15%;
   margin-top: 0em;
   margin-bottom: 0.1em;
   font-weight: 300;
   text-transform: capitalize;
 }
 
-main p {
+p.your-rocket {
   font-size: 1.7rem;
-  padding-right: 20%;
   margin-top: 1em;
   margin-bottom: 2em;
   font-weight: 100;
@@ -162,12 +181,61 @@ a.button1:hover {
 }
 
 a.button1:active {
-  background-color: #fff;
-  color: rgba(70, 40, 0, 0.9);
-  border: 0;
-  padding: 0.98rem 1.45rem;
+  padding: 1rem 1.95rem;
+  font-weight: 600;
+}
+
+.section-header,
+.waste-text {
+  color: rgb(40, 25, 0);
+}
+
+.section-header {
+  margin: 5rem 6rem 3rem 6rem;
+  text-align: center;
+  font-weight: 300;
+  font-size: 2.4rem;
+}
+
+.waste-text {
+  margin: 2rem auto;
+  text-align: justify;
+  width: 89%;
+}
+
+.why {
   font-weight: 600;
   font-size: 1.2rem;
+  margin: 1rem auto;
+  width: 70%;
+}
+
+.waste-lateral {
+  margin: 1rem auto;
+  width: 80%;
+}
+
+.waste-middle {
+  margin: 1rem auto;
+  width: 90%;
+}
+
+.contact-in-text {
+  color: rgb(0, 60, 120);
+  border: 2px solid rgb(0, 60, 120);
+  font-size: 0.9rem;
+  padding: 0.2rem 0.2rem 0.1rem 0.2rem;
+}
+
+/* ************************** */
+/* ******** Footer ********* */
+/* ************************** */
+
+footer {
+  border-top: 2px solid rgba(0, 0, 0, 0.1);
+  margin: 0 auto;
+  text-align: right;
+  width: 95%;
 }
 
 /* ************************** */
@@ -178,6 +246,7 @@ a.button1:active {
 .invisible {
   margin: 0;
   visibility: hidden;
+  font-size: 2px;
 }
 
 .narrow {
@@ -185,27 +254,21 @@ a.button1:active {
   margin: 0 auto;
 }
 
-/* ************************** */
-/* ******* Contact Us ******* */
-/* ********* Header ********* */
-/* ************************** */
+/* ***************************** */
+/* ***** Main & Contact Us ***** */
+/* *********** Header ********** */
+/* ***************************** */
 
-.shadow {
-  box-shadow: 0px 1px 3px rgba(145, 145, 145, 0.8);
-  font-size: 2px;
-  color: #fff;
-  min-width: 1080px;
-}
-
-/* **************************** */
-/* ******* Contact Info ******* */
-/* **************************** */
+/* ******************************* */
+/* ********* Contact Info ******** */
+/* ******* Contact Us Page ******* */
+/* ******************************* */
 
 .info {
-  margin: 2rem 0 0 3%;
+  margin: 2rem 0.5% 0 3%;
   background: white;
-  min-width: 440px;
-  width: 47.5%;
+  min-width: 450px;
+  width: 44.5%;
 }
 
 #contact-word {
@@ -231,13 +294,14 @@ a.button1:active {
   font-weight: 600;
 }
 
-/* *************************** */
-/* ****** Contact Form ******* */
-/* *************************** */
+/* ******************************* */
+/* ******** Contact Form ********* */
+/* ******* Contact Us Page ******* */
+/* ******************************* */
 
 .contact-form {
-  padding: 2% 0;
-  min-width: 576px;
+  padding: 2.3rem 0 2.3rem 3%;
+  min-width: 400px;
   width: 48%;
   text-align: left;
   background-color: #fff;
@@ -248,7 +312,7 @@ label {
 }
 
 .label {
-  margin: 0 1.5rem 1.5em 0;
+  margin: 0 0 1.5em 0;
   font-size: 1.3rem;
   line-height: 1.5;
 }
