--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,14 @@ body {
   clear: both; /* clears left and right floats */
 }
 
+.text-highlight--red {
+  color: darkred;
+}
+
+.text-highlight--blue {
+  color: blue;
+}
+
 /* ************************* */
 /* ******** HEADER ********* */
 /* ************************* */
@@ -190,7 +198,14 @@ header table a:hover {
   width: 89%;
 }
 
-.why {
+.why1 {
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin: 1rem auto;
+  width: 65%;
+}
+
+.why2 {
   font-size: 1.2rem;
   font-weight: 600;
   margin: 1rem auto;
@@ -204,7 +219,7 @@ header table a:hover {
 
 .waste-middle {
   margin: 1rem auto;
-  width: 90%;
+  width: 85%;
 }
 
 .contact-in-text {
@@ -223,8 +238,28 @@ header table a:hover {
 footer {
   border-top: 2px solid rgba(0, 0, 0, 0.1);
   margin: 0 auto;
-  text-align: right;
   width: 95%;
+}
+
+#vcss {
+  display: inline-block;
+  padding-left: 0.1em;
+  margin-block-start: 0.8em;
+  text-align: left;
+  width: 49.6%;
+}
+
+footer img {
+  width: 79px;
+  height: 28px;
+}
+
+#copyright {
+  display: inline-block;
+  text-align: right;
+  vertical-align: top;
+  width: 50%;
+  font-size: 0.9em;
 }
 
 /* ******************************* */
@@ -290,10 +325,10 @@ footer {
 
 .contact-form {
   background-color: #fff;
-  min-width: 400px;
   padding: 2.3rem 0 2.3rem 3%;
   text-align: left;
   width: 48%;
+  min-width: 400px;
 }
 
 label {
