--- a/css/style.css
+++ b/css/style.css
@@ -363,9 +363,9 @@ textarea:active {
 }
 
 a.button2 {
-  display: inline-block;
   border: 1px solid #c1c1c1;
   color: #333;
+  display: inline-block;
   font-size: 1rem;
   font-weight: 300;
   letter-spacing: 0.07rem;
@@ -385,4 +385,52 @@ a.button2:active {
   background-color: rgba(0, 0, 0, 0.4);
   border: 0.1em solid rgba(0, 0, 0, 0.1);
   color: #fff;
+}
+
+/* ******************************* */
+/* ******** Contact Form ********* */
+/* ******* Contact Us Page ******* */
+/* ******************************* */
+
+#thank-you {
+  display: block;
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
+.home {
+  border: 2px solid #999;
+  color: #333;
+  display: inline-block;
+  font-size: 1rem;
+  font-weight: 300;
+  letter-spacing: 0.07rem;
+  padding: 1rem 2rem;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  width: 15%;
+  min-width: 11em;
+}
+
+.home:hover {
+  background-color: #000;
+  border-color: #000;
+  color: #fff;
+}
+
+.home:active {
+  background-color: rgba(0, 0, 0, 0.4);
+  border: 0.1em solid rgba(0, 0, 0, 0.1);
+  color: #fff;
+}
+
+#back-home {
+  color: black;
+  padding: 1em 4em;
+  text-decoration: none;
 }
