--- a/css/style.css
+++ b/css/style.css
@@ -388,19 +388,20 @@ textarea:active {
   color: #fff;
 }
 
-/* ******************************* */
-/* ******** Contact Form ********* */
-/* ******* Contact Us Page ******* */
-/* ******************************* */
+/* ************************** */
+/* ******** Success ********* */
+/* ******* Submitted ******** */
+/* ************************** */
+
+.min-height {
+  min-height: 90vh;
+}
 
 #thank-you {
   display: block;
   font-size: 1.5em;
   font-weight: bold;
-  margin-block-start: 0.83em;
-  margin-block-end: 0.83em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
+  margin: 3rem 0 2rem;
 }
 
 .home {
