--- a/css/style.css
+++ b/css/style.css
@@ -399,7 +399,7 @@ textarea:active {
 
 #thank-you {
   display: block;
-  font-size: 1.5em;
+  font-size: 2rem;
   font-weight: bold;
   margin: 3rem 0 2rem;
 }
