'contact us' form updated/improved
1/ css for Contact Us form updated/changed:
min,max width n height established
2. css properties for the form improved/grouped
3. some attributes deleted from textarea tag

--- a/css/style.css
+++ b/css/style.css
@@ -340,16 +340,21 @@ label {
 }
 
 input,
+textarea,
+button.button2 {
+  border: 1px solid #c1c1c1;
+  display: block;
+  width: 98%;
+}
+
+input,
 textarea {
   background: rgb(240, 240, 240);
-  border: 1px solid #ccc;
-  display: block;
   font-family: "Roboto", sans-serif;
   font-size: 1.3rem;
   font-weight: 100;
   letter-spacing: 1.5px;
   padding: 0.1em 0 0.1em 0.4em;
-  width: 95%;
 }
 
 input:focus,
@@ -362,11 +367,16 @@ textarea:active {
   border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
+textarea {
+  min-height: 25vh;
+  max-height: 40vh;
+  min-width: 98%;
+  max-width: 98%;
+}
+
 .button2 {
   background-color: rgba(0, 0, 0, 0);
-  border: 1px solid #c1c1c1;
   color: #333;
-  display: inline-block;
   font-size: 1rem;
   font-weight: 300;
   letter-spacing: 0.07rem;
@@ -374,7 +384,6 @@ textarea:active {
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
-  width: 95%;
 }
 
 .button2:hover {
